Do some updates
