# src/controllers/response/comment.response.ts
@@ -1,4 +1,6 @@
-import { IsDate, IsString } from "class-validator";
+import { IsDate, IsInstance, IsString } from "class-validator";
+import { User } from "../../shared/user.types";
+import { CommentWithUser } from "../../shared/comment.types";
 
 export class CommentResponse {
   @IsString()
@@ -43,6 +45,60 @@ export class CommentResponse {
   }
 
   public static getCommentsListResponse(comments) {
+    return comments.map((comment) =>
+      CommentResponse.getCommentResponse(comment)
+    );
+  }
+}
+
+export class CommentWithUserResponse {
+  @IsString()
+  id: string;
+
+  @IsInstance(User)
+  user: User;
+
+  @IsString()
+  post: string;
+
+  @IsString()
+  content: string;
+
+  @IsString({ each: true })
+  likes: string[];
+
+  @IsString({ each: true })
+  replies: string[];
+
+  @IsString()
+  replyTo: string;
+
+  @IsDate()
+  createdAt?: Date;
+
+  @IsDate()
+  updatedAt?: Date;
+
+  public static getCommentResponse(comment: CommentWithUser) {
+    const { _id, ...user } = comment.user;
+
+    return {
+      id: comment._id?.toString(),
+      user: {
+        id: _id.toString(),
+        ...user,
+      },
+      post: comment.post,
+      content: comment.content,
+      likes: comment.likes,
+      replies: comment.replies,
+      replyTo: comment.replyTo,
+      createdAt: comment.createdAt,
+      updatedAt: comment.updatedAt,
+    };
+  }
+
+  public static getCommentsListResponse(comments: CommentWithUser[]) {
     return comments.map((comment) =>
       CommentResponse.getCommentResponse(comment)
     );
